[project]
name = "personal-utility"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "faiss-cpu>=1.11.0",
    "jupyter>=1.1.1",
    "langchain>=0.3.25",
    "langchain-community>=0.3.24",
    "langchain-core>=0.3.63",
    "langchain-groq>=0.3.2",
    "langchain-ollama>=0.3.3",
    "langgraph>=0.4.8",
    "notebook>=7.4.3",
    "pypdf2>=3.0.1",
    "python-docx>=1.1.2",
    "streamlit>=1.45.1",
]
